Feat: Send clear_code events
Events tied to a lock now send clear_code events when a slot end time is
older than today _or_ the start is in the future of the max events we
are monitoring. This prepares the managed slots to updated by the
sensors in the future.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/templates/update.yaml.j2
+++ b/custom_components/rental_control/templates/update.yaml.j2
@@ -35,4 +35,5 @@ automation:
         slot_code: '{% raw %}{{ states("input_text." + base + "_pin_" + sl|string) }}{% endraw %}'
         start_time: '{% raw %}{{ states("input_datetime.start_date_" + base + "_" + sl|string) }}{% endraw %}'
         end_time: '{% raw %}{{ states("input_datetime.end_date_" + base + "_" + sl|string) }}{% endraw %}'
-  mode: restart
+  mode: queued
+  max: {{ config_entry["max_events"]|int + 2 }}
