Fix: Add unique IDs to generated automations
Issue: Fixes #155
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/templates/clear_code.yaml.j2
+++ b/custom_components/rental_control/templates/clear_code.yaml.j2
@@ -1,5 +1,6 @@
 ---
 automation:
+  id: "{{ config_entry["unique_id"] }} - {{ NAME }} - Clear code slot {{ rc_name }}"
   alias: "{{ NAME }} - Clear code slot {{ rc_name }}"
   description: ""
   trigger:
