--- a/custom_components/rental_control/templates/set_code.yaml.j2
+++ b/custom_components/rental_control/templates/set_code.yaml.j2
@@ -1,5 +1,6 @@
 ---
 automation:
+  id: "{{ config_entry["unique_id"] }} - {{ NAME }} - Set code {{ rc_name }}"
   alias: {{ NAME }} - Set Code {{ rc_name }}
   description: ""
   mode: queued
