--- a/custom_components/rental_control/templates/startup.yaml.j2
+++ b/custom_components/rental_control/templates/startup.yaml.j2
@@ -1,5 +1,6 @@
 ---
 automation:
+  id: "{{ config_entry["unique_id"] }} - {{ NAME }} - Update {{ rc_name }} - startup"
   alias: "{{ NAME }} - Update {{ rc_name }} - startup"
   description: ""
   trigger:
