Fix: Stringify rental_control_name in automations
If a RC is defined with a name that is purely numeric then the default
behavior of yaml is to treat an numeric as a numeric and not a string.
This has a side effect of not properly stringifing the name where it
needs to be a string in the automations.

Fixes: #164
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/templates/clear_code.yaml.j2
+++ b/custom_components/rental_control/templates/clear_code.yaml.j2
@@ -7,7 +7,7 @@ automation:
     - platform: event
       event_type: rental_control_clear_code
       event_data:
-        rental_control_name: {{ rc_name }}
+        rental_control_name: "{{ rc_name }}"
   condition: []
   action:
     service: input_boolean.toggle
