--- a/custom_components/rental_control/templates/startup.yaml.j2
+++ b/custom_components/rental_control/templates/startup.yaml.j2
@@ -9,7 +9,7 @@ automation:
     - platform: event
       event_type: rental_control_refresh
       event_data:
-        rental_control_name: {{ rc_name }}
+        rental_control_name: "{{ rc_name }}"
   condition: []
   action:
     - delay:
